# pychron

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .project  .psycho.yaml  .pydevproject  .readthedocs.yml  .travis.orig.yml  .travis.yml  .travis_miniconda.yml  404.html  AGENTS.md  ArgonLab.mwb  CHANGELOG.md  CNAME  CODE_CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_SEARCH_RESULTS.md  CRITICALNOTES.md  DEVICE_FAILURE_ANALYSIS.md  DOCUMENTATION_REVIEW.md  Dockerfile  EXECUTABLE_TRAIT_LISTENER_MAP.md  GemFile  HARDWARE_LIBRARY_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INSTALL  LICENSE.md  Makefile  OBSERVABILITY_GETTING_STARTED.md  PHASE_6_SUMMARY.md  PREFERENCES_PANE_FIXES.md  PROMETHEUS_ANALYSIS.md  PROMETHEUS_EVENTS_GUIDE.md  PROMETHEUS_IMPLEMENTATION.md  PROMETHEUS_PLUGIN.md  README  README.md  ROADMAP.md  SEARCH_RESULTS_INDEX.md  (+56 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  dependabot_automerge.yml  deploy-docs.yml  (+7 more)
_includes/: comments.html  header.html  portfolio.html
_layouts/: default.html  post.html
_posts/: 2014-05-27-first-post.md  2014-11-18-Released v2.0.4.md  2014-11-19-Musings.md  2014-11-20-Day2.md  2014-11-21-Day3.md  2014-11-24-Optimization.md  2014-11-25-Day5.md
about/: index.md
alembic_dvc/: env.py
app_utils/: analysis_renamer.py  app_maker.py  appify.sh  basic_install.sh  demo.sqlite  elsetup.py  experiment_conda_requirements.txt  experiment_pip_requirements.txt  install.py  install.sh  install2.sh  install_development.sh  migrate.py  new_plugin.py  notes  populate_dvc.py  pychron-dr-stable.linux.bundle  pychron-dr-stable.macos.bundle  pychron-dr-stable.windows.bundle  pychron_launcher.sh  pychron_support_2021_05_26_10_40_01.sql  pychron_update.sh  pychrondvc_for_install.sql  renamer.py
backup/: README.md  mysql-backup-rotate.ps1  mysql-backup-rotate.sh  mysql-backup.cnf.example  mysql-restore-latest.ps1  mysql-restore-latest.sh  windows-zdrive-backup.ps1
blog/: index.md
contact/: index.md
data/: .gitignore
deploy/: fabfile_valve.py
docs/: Makefile  auto-update-summary.md  build.rst  conf.py  demo.rst  doc-map.json  environment.yml  index.rst  intro.html  intro.rst  massspec_pychron.rst  observability.md  prometheus_initialization.md  python.rst  requirements.txt  setup.rst
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
eam/: info.py
javascripts/: ga.js
launchers/: ENV.txt  QTDark.css  bakedpy.py  bakedpy_debug.py  bakeout.py  darkorange.css  emulator.py  firmware.py  helpers.py  launcher.py  password_gen.py  pychron_dev.py  pyco2.py  pyco2_debug.py  pydemo_debug.py  pydiode.py  pydiode_debug.py  pyexperiment.py  pyexperiment_debug.py  pyuv_debug.py  pyvalve.py  pyvalve_debug.py  pyview.py  pyview_debug.py  remote_hardware_server.py  remote_hardware_server_debug.py  test.py  testbot.sh  version.py  version_info.py  video_client_player.py  video_server_debug.py
links/: index.md
manuscript/: paper.bib  paper.md
migration/: base_isotopedb_schema.sql  env.py  init_db.py
pychron/: __init__.py  __main__.py  application_controller.py  base_config_loadable.py  base_fs.py  cli.py  cli_profiles.py  column_sorter_mixin.py  config_loadable.py  config_mixin.py  consumer_mixin.py  deprecate.py  docs_hardware.py  docs_pyscript.py  easy_parser.py  emulation_server.py  execute_mixin.py  file_defaults.py  fractional_loss_calculator.py  github.py  globals.py  hardwaredocs.md  hardwaredocs.py  has_communicator.py  headless_config_loadable.py  headless_loggable.py  iextraction_device.py  initialization_parser.py  initializer.py  install_bootstrap.py  install_runtime.py  install_support.py  install_validation.py  loggable.py  paths.py  persistence_loggable.py  plugin_edit_view.py  pychron_constants.py  regex.py  response_recorder.py  (+9 more)
pychron.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qtegra/: RemoteControlServer.cs  RemoteControlServerChanges.txt  SampleFunctionIncludeScript.cs  SampleFunctionScript.cs  protocol.txt  rcs_protocol.txt  remote_control_server_doc.txt
requirements/: requirements.txt  test_requirements.txt
resources/: bakeout_icon.icns  icon_req.txt  icon_requirements.txt  info  pychron_icon.icns  remote_hardware_server_beta_icon.ai
sandbox/: basemap_ex.py  count_time.py  dead_time.py  demo.py  device_launcher.py  emulator.py  export_spec.py  featurator.py  furnace_cal.py  graph_loop_test.py  heapy_runner.py  image_process_tester.py  installer.py  limits_tool_test.py  looper.py  objgraph_test.py  peak_regression_launcher.py  plot_degas.py  power_map_launcher.py  quick_web_server.py  reg_test.py  revisual.py  scanner.py  system_monitor_beacon.py  test.py  text_editor.py  timeout_confirm.py  tracer.py  video_player.py  video_stitcher.py
scripts/: doc_audit.py
stylesheets/: blog.css  directives.css  img.css
test/: analysis.py  argon_calc.py  automated_run.py  bayesian.py  command_re.py  database.py  diode.py  experiment.py  experiment_queue.py  fits.py  flat_file.py  floatfmt.py  lab_entry.py  loading.py  machine_vision.py  magnet.py  motor.py  plateau.py  processing.py  pyscript.py  stats.py  wagon_wheel.py
(+4068 files in other folders)
