[tool.black]
include = '\.py?$'
extend-exclude= "^/[docs|sandbox|test|alembic_dvc|zobs]"
max-line-length= "100"
verbose = "true"
# check = "true"

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[project]
name = "pychrondc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chaco>=6.1.1",
    "cryptography>=46.0.3",
    "envisage>=7.0.4",
    "gitpython>=3.1.45",
    "lxml>=6.0.2",
    "numpy>=2.3.4",
    "pygments>=2.19.2",
    "pymysql>=1.1.2",
    "pyqt6>=6.0.0",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "scipy>=1.16.2",
    "six>=1.17.0",
    "sqlalchemy>=2.0.44",
    "statsmodels>=0.14.5",
    "tables>=3.10.2",
    "traits>=7.0.2",
    "traitsui>=8.0.0",
    "uncertainties>=3.2.3",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
    "xlwt>=1.3.0",
]
