[tool.black]
include = '\.py?$'
extend-exclude= "^/[docs|sandbox|test|alembic_dvc|zobs]"
max-line-length= "100"
verbose = "true"
# check = "true"

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[project]
name = "pychrondc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "chaco>=6.1.1",
    "cryptography>=46.0.3",
    "envisage>=7.0.4",
    "gitpython>=3.1.45",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.3.4",
    "pygments>=2.19.2",
    "pymysql>=1.1.2",
    "pyproj>=3.7.2",
    "pyqt5>=5.15.2",
    "pyserial>=3.5",
    "pyyaml>=6.0.3",
    "qimage2ndarray>=1.10.0",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "scikit-image>=0.26.0",
    "scipy>=1.16.2",
    "six>=1.17.0",
    "sqlalchemy>=2.0.44",
    "statsmodels>=0.14.5",
    "tables>=3.10.2",
    "traits>=7.0.2",
    "traitsui>=8.0.0",
    "uncertainties>=3.2.3",
    "utm>=0.8.1",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
    "xlwt>=1.3.0",
]
