[tool.black]
include = '\.py?$'
extend-exclude= "^/[docs|sandbox|test|alembic_dvc|zobs]"
line-length = 100
verbose = true
# check = "true"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "docs/",
    "sandbox/",
    "test/",
    "alembic_dvc/",
    "zobs/",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[project]
name = "pychrondc"
version = "2026.2.0"
description = "Pychron is a set of applications for the collection and processing of noble gas mass spectrometry data."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "chaco>=6.1.1,<7",
    "cryptography>=46.0.3,<47",
    "envisage>=7.0.4,<8",
    "gitpython>=3.1.45,<4",
    "jinja2>=3.1.6,<4",
    "lxml>=6.0.2,<7",
    "matplotlib>=3.10.8,<4",
    "numpy>=2.3.4,<3",
    "peakutils>=1.3.5,<2",
    "prometheus-client>=0.21.0,<1",
    "pygments>=2.19.2,<3",
    "pymysql>=1.1.2,<2",
    "pyproj>=3.7.2,<4",
    "pyqt5>=5.15.2,<6",
    "pyyaml>=6.0.3,<7",
    "qimage2ndarray>=1.10.0,<2",
    "reportlab>=4.4.4,<5",
    "requests>=2.32.5,<3",
    "requests-oauthlib>=2.0.0,<3",
    "scikit-image>=0.26.0,<1",
    "scipy>=1.16.2,<2",
    "six>=1.17.0,<2",
    "sqlalchemy>=2.0.44,<3",
    "statsmodels>=0.14.5,<1",
    "tables>=3.10.2,<4",
    "traits>=7.0.2,<8",
    "traitsui>=8.0.0,<9",
    "typer>=0.16.1,<1",
    "uncertainties>=3.2.3,<4",
    "utm>=0.8.1,<1",
    "xlrd>=2.0.2,<3",
    "xlsxwriter>=3.2.9,<4",
    "xlwt>=1.3.0,<2",
]

[project.scripts]
pychron = "pychron.cli:main"
pychron-bootstrap = "pychron.cli:bootstrap_main"
pychron-doctor = "pychron.cli:doctor_main"
pychron-telemetry = "pychron.experiment.telemetry.cli:main"

[project.optional-dependencies]
hardware = [
    "pyserial>=3.5,<4",
]

laser = [
    "pyserial>=3.5,<4",
]

spectrometer-ngx = [
    "pyserial>=3.5,<4",
]

ngx = [
    "pyserial>=3.5,<4",
]

valve = [
    "pyserial>=3.5,<4",
    "twisted>=22.8.0,<25",
]

[dependency-groups]
dev = [
    "black",
    "mypy>=1.15.0,<2",
    "pre-commit>=4.2.0,<5",
    "types-requests",
    "types-pyyaml",
    "types-six",
    "types-simplejson",
    "types-ujson",
    "types-pytz",
    "types-pymysql",
    "types-paramiko",
    "traits-stubs>=6.4.0",
]
